--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   provider: ^6.1.4
+  iconsax: ^0.0.8
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
