--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.4
   iconsax: ^0.0.8
   font_awesome_flutter: ^10.8.0
+  geolocator: ^14.0.0
 
 dev_dependencies:
   flutter_test:
